# ResumeForge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  env_loader.py  pyproject.toml  requirements.txt  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
coding_mcp/: __init__.py  api.py  config.py  exceptions.py  markdown_writer.py  prompts.py  schemas.py  tool.py
github_mcp/: __init__.py  analyzer.py  api.py  config.py  exceptions.py  markdown_writer.py  prompts.py  schemas.py  tool.py
linkedin_mcp/: __init__.py  config.py  exceptions.py  markdown_writer.py  parser.py  prompts.py  schemas.py  tool.py  utils.py
resume_mcp/: __init__.py  aggregator.py  classifier.py  config.py  deduplicator.py  exceptions.py  extractor.py  markdown_writer.py  prompts.py  schemas.py  timeline.py  tool.py
tailor_mcp/: __init__.py  config.py  exceptions.py  prompts.py  reader.py  tool.py
