[project]
name = "profile-builder"
version = "1.0.0"
description = "MCP server for building resume profiles from LinkedIn, GitHub, and more"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
profile-builder-mcp = "server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
