[project]
name = "resumeforge"
version = "1.1.0"
description = "A modular MCP server that converts LinkedIn, GitHub, coding profiles, and resume files into structured Markdown — ready for AI-powered resume generation."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ResumeForge Contributors" }]
keywords = ["mcp", "resume", "linkedin", "github", "career", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "python-dateutil>=2.9.0",
    "rapidfuzz>=3.6.0",
]

[project.urls]
Homepage      = "https://github.com/vijayakanth06/ResumeForge"
Repository    = "https://github.com/vijayakanth06/ResumeForge"
Issues        = "https://github.com/vijayakanth06/ResumeForge/issues"
Changelog     = "https://github.com/vijayakanth06/ResumeForge/blob/main/CHANGELOG.md"

[project.scripts]
resumeforge = "server:main"

[build-system]
requires      = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["*_mcp*", "env_loader*"]
